--- a/bio.html
+++ b/bio.html
@@ -2,11 +2,11 @@
 <html>
 <head>
         <meta charset="utf-8">
-        <title> John Tagliaferro's Bio </title>
+        <title> Karl Wilson's Bio </title>
 </head>
 <body>
         <div>
-                <h1>John Tagliaferro's Resume</h1>
+                <h1>Karl Wilson's Resume</h1>
         </div>
 
 </body>
