first draft of bio

--- a/bio.html
+++ b/bio.html
@@ -6,8 +6,17 @@
 </head>
 <body>
         <div>
-                <h1>Karl Wilson's Resume</h1>
+                <h1>Karl Wilson's Bio</h1>
         </div>
+        <p>
+        It was a dark and stormy night, and then Karl Wilson was born.
+        Karl Wilson grew up in a small house on the outskirts of Missoula,
+        Montana.  He attended schools and decided he enjoyed Computer 
+        Programming.  As such, he does Computer Programming.  Karl Wilson
+        now attend Tufts University and is taking many classes.  Karl Wilson
+        enjoys many things, such as playing Falco in SSBM.  He plays a laser 
+        heavy and spacing intensive game, which is described as "hype".
+        </p>
 
 </body>
 </html>
